Separate integration tests and examples to separate modules (CHARTS-113)
Change-Id: I0659e4aae363809c9fada40f34cda2614abd45f2